CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(DEPENDENCIES_DIR CACHE PATH "")

FILE(GLOB_RECURSE BOOST_ROOT ${DEPENDENCIES_DIR}/boost*/project-config.jam)
GET_FILENAME_COMPONENT(BOOST_ROOT ${BOOST_ROOT} DIRECTORY)

FILE(GLOB_RECURSE ZLIB_ROOT ${DEPENDENCIES_DIR}/zlib*/zlib.h)
GET_FILENAME_COMPONENT(ZLIB_ROOT ${ZLIB_ROOT} DIRECTORY)

ADD_SUBDIRECTORY(src)